[] cd /Users/knicky/Documents/pythonLearning ; /usr/bin/env /usr/local/bin/python3 /Users/knicky/.vscode/extensions/ms-python.python-2022.21.13481008/pythonFiles/lib/python/debugpy/adapter/../../debugpy/launcher 59000 -- /Users/knicky/Documents/pythonLearning/indexTheBoringStuff.py

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,5 @@
 .DS_Store
 # системная JetBrains
 .idea/
-# Обучающие файлы в PDF
- pdfFolder/
-# Обучающие файлы в PDF
- pdfFolder/*
+# файл с тренировочными заданиями
 quizPythonTraining.py
